@@ -1,0 +1,2 @@
+# This file has DOS line endings (\r\n) on purpose
+return 'dos'
